--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "target": "es5"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "plugins/cordova-plugin-contacts/types/index.d.ts",
+    "plugins/cordova-plugin-contacts/types/index.d.ts"
   ],
   "exclude": [
     "node_modules",
