--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
+    "dev": "nf start",
+    "start": "ionic-app-scripts serve",
+    "electron dist": "electron .",
+    "ebuild": "./node_modules/.bin/build",
+    "ebuild-full": "npm run build && npm run ebuild",
+    "windowsBuild": "npm run ebuild -w building for window",
+    "linuxBuild": "npm run ebuild -l building for linux",
+    "macBuild": "npm run ebuild -m building for mac",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
@@ -40,6 +48,9 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1",
+    "foreman": "^3.0.0",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -53,6 +64,20 @@
     },
     "platforms": [
       "android"
+    ]
+  },
+  "main": "electron/electron.js",
+  "config": {
+    "ionic_bundler": "webpack",
+    "ionic_webpack": "./config/webpack.config.js"
+  },
+  "build": {
+    "appId": "com.lohanitech.ionic-electron-test",
+    "electronVersion": "1.7.5",
+    "asar": false,
+    "files": [
+      "www/**/*",
+      "electron/*"
     ]
   }
 }
