Chat page was implemented without full-functionality.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "electron dist": "electron .",
     "ebuild": "./node_modules/.bin/build",
     "ebuild-full": "npm run build && npm run ebuild",
-    "windowsBuild": "npm run ebuild -w building for window",
-    "linuxBuild": "npm run ebuild -l building for linux",
-    "macBuild": "npm run ebuild -m building for mac",
+    "windowsBuild": "npm run ebuild-full -w building for window ELECTRON_ENV=production",
+    "linuxBuild": "npm run ebuild-full -l building for linux ELECTRON_ENV=production",
+    "macBuild": "npm run ebuild-full -m building for mac ELECTRON_ENV=production",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
