--- a/package.json
+++ b/package.json
@@ -36,15 +36,19 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
-    "cordova-plugin-device": "^2.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.7",
+    "simplewebrtc": "^3.0.2",
     "sw-toolbox": "3.6.0",
+    "webrtc-adapter": "^6.3.2",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
@@ -61,10 +65,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   },
   "main": "electron/electron.js",
